# Lyra-flight-computer

./: README.md  TPS2H160 calculator.ods  hopeworkspace.code-workspace
CamControl/camcontrol/: camcontrol.kicad_pcb  camcontrol.kicad_prl  camcontrol.kicad_pro  camcontrol.kicad_sch  fp-info-cache  sym-lib-table
CamControl/camcontrol stm32/: #auto_saved_files#  _autosave-camcontrol stm32.kicad_pcb  camcontrol stm32.kicad_pcb  camcontrol stm32.kicad_prl  camcontrol stm32.kicad_pro  camcontrol stm32.kicad_sch  camcontrol stm32.step  fp-info-cache  fp-lib-table  sym-lib-table  ~camcontrol stm32.kicad_pcb.lck
CamControl/camcontrolstm32cubepleaseworkibegofyou/: .cproject  .mxproject  .project  camcontrolstm32cubepleaseworkibegofyou.ioc
CamControl/universal ground station/: fp-lib-table  sym-lib-table  universal ground station.kicad_prl  universal ground station.kicad_pro  universal ground station.kicad_sch
Deprecated/: README.md
Deprecated/flight computer FOX/: flight computer FOX.kicad_pcb  flight computer FOX.kicad_sch
Hardware/: logo.kra  logov2.kra  logov2.kra~  logov2.png~
Hope/Firmware/CPP testing/learninghelp/: CMakeLists.txt  file.txt  main.cpp
Hope/Firmware/CPP testing/learninghelp/lib/: CMakeLists.txt  lib.cpp  lib.h
Hope/Hope/: Ebyte.bak  (+13 more)
LOGS/: COM44_2025_03_29.08.14.39.650.txt  COM44_2025_03_29.08.17.58.675.txt  pyxis data log far 1-20.csv  pyxis data log far 1-20raw.csv  reciver log 1-28 - Copy.csv  reciver log 1-28 flight 1- .csv  reciver log 1-28.csv  reciver log flight 2 1-28.csv
avionics/: SamacSys_Parts.kicad_sym  SamacSys_Parts.lib
(+1495 files in other folders)
